try to change arrow up, because on mobile it doee not display correctly

--- a/src/Components/UI/UpButton/UpButton.scss
+++ b/src/Components/UI/UpButton/UpButton.scss
@@ -11,5 +11,6 @@
     background: gray;
     width: 30px;
     height: 30px;
+    font-family: Arial, sans-serif;
   }
 }
